[workspace]
members = [
  "help_me_unpack"
]

[workspace.dependencies]
tokio = { version="1.29.1", features = ["full"] }
miette = { version="5.10.0", features = ["fancy"] }
reqwest = { version = "0.11.18", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
